--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin 967083126936.dkr.ecr.$AWS_REGION.amazonaws.com
+      - $(aws ecr get-login --region $AWS_REGION --no-include-email)
 
   build:
     commands:
